clusters/seaweedfs-cluster/test-app-intruder/test-app-intruder-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test-app-intruder
  name: test-app-intruder
  namespace: test-app-intruder
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test-app-intruder
  strategy: {}
  template:
    metadata:
      labels:
        app: test-app-intruder
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
      - image: test:1.0.0
        name: test
        imagePullPolicy: Never
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        volumeMounts:
          - name: data-volume
            mountPath: /data
        resources: {}
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: test-app-intruder-claim
status: {}
