clusters/seaweedfs-cluster/test-app-intruder/test-app-intruder-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: test-app-intruder-access
  namespace: test-app-intruder
spec:
  endpointSelector:
    matchLabels:
      app: test-app-intruder
      io.kubernetes.pod.namespace: test-app-intruder
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/component: s3
            app.kubernetes.io/instance: seaweed-sample
            app.kubernetes.io/managed-by: seaweedfs-operator
            app.kubernetes.io/name: seaweedfs
            io.kubernetes.pod.namespace: seaweedfs
      toPorts:
        - ports:
            - port: "8333"
              protocol: TCP
            - port: "18333"
              protocol: TCP
